--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,2 @@
-# These individuals contributed to the hbnb project in this repository 
-
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
+Believe Liphadzi <pbliphadzi@gmail.com>
+Jozè Simao <jozesimao10@gmail.com>
